Squashed commit of the following:
commit 24eb3160dc7c71d12a9daeb150ae7d15a3f6ac27
Merge: d4870c2 d582b37
Author: mysear <songsf224@sina.com>
Date:   Mon Sep 17 16:34:33 2018 +0800

    Merge branch 'master' into handover

commit d4870c2c668ae0ad47ac83fa76c05d89cd98c883
Author: maccm <chengming08@163.com>
Date:   Mon Sep 17 16:30:49 2018 +0800

    修改初始化银行审批状态

commit ff558a61e24e3bf738cdc08eb90deea5ebaff4e6
Author: mysear <songsf224@sina.com>
Date:   Mon Sep 17 16:25:38 2018 +0800

    bug fix:企业端保证金为3位数以上时，去除逗号有问题

commit d0e338db0bf69cb84c0d776256c107891e511fde
Merge: 1b25ebd fb16900
Author: maccm <chengming08@163.com>
Date:   Fri Sep 14 18:39:28 2018 +0800

    Merge branch 'handover' of https://github.com/DragonLetter/BS into handover

commit 1b25ebd95d67fbb7324de19b62368569a9aa245f
Author: maccm <chengming08@163.com>
Date:   Fri Sep 14 18:36:12 2018 +0800

    修改完善

commit fb16900f27c277c8db17d013506b6d1e0f3fdaaa
Author: mysear <songsf224@sina.com>
Date:   Fri Sep 14 18:09:32 2018 +0800

    优化交单界面

commit 025c054469a7fabb4881b3704848ae03cdd39c69
Author: mysear <songsf224@sina.com>
Date:   Fri Sep 14 17:05:03 2018 +0800

    增加信用证修改数据处理

commit 2d077364e687e70c47eb76ab01e842e084fe071a
Author: maccm <chengming08@163.com>
Date:   Fri Sep 14 16:29:52 2018 +0800

    完善银行端交单流程

commit 9d93b307038778f385b6b3b6d014b53b68d6bc05
Author: mysear <songsf224@sina.com>
Date:   Fri Sep 14 14:27:49 2018 +0800

    交单功能企业端完善

commit ee835e229d37f0a220f0fa215aceeedcc6c504be
Author: mysear <songsf224@sina.com>
Date:   Fri Sep 14 10:38:03 2018 +0800

    交单功能更新

commit 6fcf967b32108dfdd981a1972ff65b82bc14bfe1
Author: mysear <songsf224@sina.com>
Date:   Thu Sep 13 19:53:28 2018 +0800

    交单功能

commit 25896db8004d9dc71bc378dc1f2fab8c1a51432e
Author: maccm <chengming08@163.com>
Date:   Thu Sep 13 18:00:29 2018 +0800

    补充上传文件

commit e9c32d48cad0b4af6f907263bb3efa43cb25db29
Author: maccm <chengming08@163.com>
Date:   Thu Sep 13 17:32:36 2018 +0800

    添加交单功能

    1.添加页面
    2.修改
