# web_backend/api/swagger.yaml
@@ -26,6 +26,8 @@ tags:
   description: "银行信息"
 - name: "BankRecord"
   description: "银行操作记录"
+- name: "BillRecord"
+  description: "交单操作记录"
 - name: "Bank Service: Network Metrics"
   description: "银行端，关键业务指标"
 - name: "Bank Service: Transaction"
@@ -619,6 +621,46 @@ paths:
         default:
           description: "OK"
       x-swagger-router-controller: "BankLetterofCredit"
+  /bank/LetterofCredit/BillBankReceivedAudit:
+    post:
+      tags: 
+      - "Bank Service: LetterofCredit"
+      summary: "开证银行：到单审查"
+      description: ""
+      operationId: "billBankReceivedAudit"
+      produces: 
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: ""
+        required: true
+        schema:
+            $ref: "#/definitions/LCDocsReceived"
+      responses:
+        default:
+          description: "OK"
+      x-swagger-router-controller: "BankLetterofCredit"
+  /bank/LetterofCredit/BillAcceptancePayment:
+    post:
+      tags: 
+      - "Bank Service: LetterofCredit"
+      summary: "开证行，承兑或者拒付"
+      description: ""
+      operationId: "billAcceptancePayment"
+      produces: 
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: ""
+        required: true
+        schema:
+            $ref: "#/definitions/LCAcceptPayment"
+      responses:
+        default:
+          description: "OK"
+      x-swagger-router-controller: "BankLetterofCredit"          
   /bank/LetterofCredit/advisingBankDocsReceivedAudit:
     post:
       tags: 
@@ -843,12 +885,14 @@ paths:
         default:
           description: "OK"
       x-swagger-router-controller: "LetterofCredit"      
+
+# 信用证交单业务流程，操作接口 ------- 企业端 ------
   /LetterofCredit/beneficiaryHandoverBills:
     post:
       tags: 
       - "LetterofCredit"
-      summary: "申请人修改信用证"
-      description: "申请人修改信用证"
+      summary: "受益人交单"
+      description: "受益人交单"
       operationId: "beneficiaryHandoverBills"
       produces: 
       - "application/json"
@@ -859,6 +903,26 @@ paths:
         required: true
         schema:
             $ref: "#/definitions/HandoverBills"
+      responses:
+        default:
+          description: "OK"
+      x-swagger-router-controller: "LetterofCredit"                               
+  /LetterofCredit/appliciantCheckBills:
+    post:
+      tags: 
+      - "LetterofCredit"
+      summary: "申请人审单"
+      description: "申请人审单"
+      operationId: "appliciantCheckBills"
+      produces: 
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: ""
+        required: true
+        schema:
+            $ref: "#/definitions/BillsCheck"
       responses:
         default:
           description: "OK"
@@ -1244,6 +1308,131 @@ paths:
         405:
           description: "Validation exception"
       x-swagger-router-controller: "BankRecord"
+  /Bank/BillRecord/{AFNo}:
+    get:
+      tags:
+      - "BillRecord"
+      summary: "Get bill operation records by lcNo."
+      description: "Returns Bill operation records of lcNo."
+      operationId: "getBillRecords"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "AFNo"
+        in: "path"
+        description: "AFNo of operation records"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/BillRecord"
+      x-swagger-router-controller: "BillRecord"
+    post:
+      tags:
+      - "BillRecord"
+      summary: "Add a new bill record to the database."
+      description: ""
+      operationId: "addBillRecord"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "AFNo"
+        in: "path"
+        description: "AFNo of operation records"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "body"
+        description: "bill record object that needs to be added to the database"
+        required: true
+        schema:
+          $ref: "#/definitions/BillRecord"
+      responses:
+        405:
+          description: "Invalid input"
+      x-swagger-router-controller: "BillRecord"
+    put:
+      tags:
+      - "BillRecord"
+      summary: "Update an existing bill record"
+      description: ""
+      operationId: "updateBillRecord"
+      consumes:
+      - "application/json"
+      
+      produces:
+      
+      - "application/json"
+      parameters:
+      - name: "AFNo"
+        in: "path"
+        description: "AFNo of operation records"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "body"
+        description: "Bill record object that needs to be added to the database."
+        required: true
+        schema:
+          $ref: "#/definitions/BillRecord"
+      responses:
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Bill record not found"
+        405:
+          description: "Validation exception"
+      x-swagger-router-controller: "BillRecord"
+  /BillRecord/GetBState:
+    post:
+      tags:
+      - "BillRecord"
+      summary: "Get the state of this LC's bill "
+      description: "根据信用证编号和交单编号获取该交单的状态"
+      operationId: "getBillState"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "BillQuery object that needs to be update to the store"
+        required: true
+        schema:
+          $ref: "#/definitions/BillQuery"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/BillState"
+      x-swagger-router-controller: "BillRecord"
+  /BillRecord/UpdateBState:
+    post:
+      tags:
+      - "BillRecord"
+      summary: "更新交单状态"
+      description: ""
+      operationId: "updateBillState"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "BillState object that needs to be update to the store"
+        required: true
+        schema:
+          $ref: "#/definitions/BillState"
+      responses:
+        405:
+          description: "Invalid input"
+      x-swagger-router-controller: "BillRecord"
 
 # 签约银行信息
   /SignedBank:
@@ -2977,6 +3166,58 @@ definitions:
         type: "string"
       depositAmount:
         type: "string"
+  BillQuery:
+    type: "object"
+    properties:
+      AFNo:
+        type: "string"
+      No:
+        type: "string"
+  BillState:
+    type: "object"
+    properties:
+      id:
+        type: "string"
+      #信用证申请编号
+      AFNo:
+        type: "string"
+      #步骤
+      step:
+        type: "string"
+      #状态
+      state:
+        type: "string"
+      #交单编号No
+      No:
+        type: "string"
+      #办理过程数据accAmount
+      accAmount:
+        type: "string"
+      #办理过程数据suggestion
+      suggestion:
+        type: "string"
+      #办理过程数据isAgreed
+      isAgreed:
+        type: "string"
+  BillRecord:
+    type: "object"
+    properties:
+      AFNo:
+        type: "string"
+      No:
+        type: "string"
+      step:
+        type: "string"
+      userID:
+        type: "string"
+      userName:
+        type: string
+      isAgreed:
+        type: "string"
+      suggestion:
+        type: "string"
+      accAmount:
+        type: "string"
   appLoginInput:
     type: "object"
     properties:
@@ -3190,11 +3431,41 @@ definitions:
       isAgreed: 
         type: "string"
       depositDoc:
-        $ref: "#/definitions/Document"   
+        $ref: "#/definitions/Document" 
+  # 信用证交单结构，受益人  
   HandoverBills:
     type: "object"
     properties:
       no:
+        type: "string"
+      billinfo:
+        type: "array"
+        items:
+          $ref: "#/definitions/BillInfo"
+      # billFile:
+      #   type: "object"
+  BillInfo:
+    type: "object"
+    properties:
+      bolNo:
+        type: "string"
+      goodsNo:
+        type: "string"
+      goodsInfo:
+        type: "string"
+      shippingTime:
+        type: "string"
+  # 信用证交单审核，申请人/开证行
+  BillsCheck:
+    type: "object"
+    properties:
+      lcNo:
+        type: "string"
+      billNo:
+        type: "string"
+      suggestion:
+        type: "string"
+      isAgreed:
         type: "string"
   TransFData:
     type: "object"
@@ -3560,6 +3831,8 @@ definitions:
     properties:
       no:
         type: "string"
+      bno:
+        type: "string"
       suggestion:
         type: "string"
       isAgreed:
@@ -3579,9 +3852,9 @@ definitions:
     properties:
       no:
         type: "string"
-      amount:
+      bno:
         type: "string"
-      dismatchPoints:
+      amount:
         type: "string"
       suggestion:
         type: "string"
